@@ -1,3 +1,11 @@
+2006-02-20  Sven Panne  <sven.panne@aedion.de>
+
+	* admin/autotools/.indent.pro, src/al_types.h, src/alc/alc_context.c,
+	src/alc/alc_device.c, src/backends/alc_backend.c,
+	src/backends/alc_backend.h, src/extensions/al_ext_loki.c: Finally moved
+	the backend-related stuff (i.e. the function table and the private data)
+	cleanly into the device structure.
+
 2006-02-17  Sven Panne  <sven.panne@aedion.de>
 
 	* src/backends/alc_backend.c, src/backends/alc_backend.h,
